--- a/etc/dynv6/config
+++ b/etc/dynv6/config
@@ -1,1 +1,3 @@
-# this file overrides default parameters from /etc/default/dynv6 and should be empty
+HOSTNAME=$(cat /etc/dynv6/hostname)
+DEVICE=$(cat /etc/dynv6/device)
+TOKEN=$(cat /etc/dynv6/token)
